@@ -1,6 +1,5 @@
 \name{RQDA2tm}
 \alias{RQDA2tm}
-%- Also NEED an '\alias' for EACH other topic documented here.
 \title{RQDA to Corpus}
 \description{
   Constructs a text document collection (corpus) from RQDA codings.
@@ -18,5 +17,5 @@ To retrieve the codings of \code{Code}, and turn the codings into a corpus.
 \value{
   An S4 object of class \code{Corpus}.
 }
-\author{ J-P Mueller}
+\author{J-P Mueller and documented by HUANG Ronggui}
 \seealso{\code{\link[tm]{Corpus}}}
