@@ -34,22 +34,25 @@ h1 {
 <li>Support non-English documents, Simplified Chinese Character is well-tested under Windows
 <li>Character-level coding using codes
 <li>Memos of documents, codes, coding, project, files and more
-<li>Retrieval of coding, and easily back to the original file (ease the problem of segmentation)
+<li>Retrieval of coding, and easily back to the original file (ease the problem of segmentation). Conditional retrieval is supported as well.
 <li>Single-file (*.rqda) format, which is basically SQLite database. Data are stored in UTF-8, so it should be portable
 <li>Facilitator helps to categorize codes,which is key to theory building. I deliberately avoid using tree-like categorization
 <li>Facilitator helps to categorize files
-<li>Search files by keywords
+<li>Search files by keywords and can highlight keyword in the open file.
 <li> Atrributes of file, which is useful for content analysis
-<li>There is a case category and related attributes of cases, which is crucial feature to bridge qualitative and quantitative research
+<li>There is a case category and related attributes of cases, which is crucial feature to bridge qualitative and quantitative research.
 <li>Search information about selected case from the Internet vis popup menu
 <li>Temporary delete files and codes
-<li> Rename the files,code, code category, case and others
+<li>Rename the files,code, code category, case and others
 
 <p>By R functions, it can:
 <li>Manipulate the temporary deletion (list, undo temporary deletion and permanently erase them)
 <li>Import a batch of files
 <li>Calculate the relation between two codings, given the coding indexs
-<li>Gives a summary of coding and inter-code relationship
+<li>Gives a summary of coding and inter-code relationship.
+<li>Export of file/case attributes and show subset of files/cases only in respective widget by ShowSubset function.
+<li>More flexible way of conditional retrieval.
+<li>Construct corpus from codings by RQDA2tm function.
 
 <p>You can use <i>help(package="RQDA")</i> to see more functions in the RQDA package. 
 
